[project]
name = "git-lfs-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "taki-d", email = "mail@orangepla.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
